# Nomask-webpage

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.forgejo/workflows/: ci.yml
apps/: __init__.py
apps/neuroa_app/: admin.py  apps.py  backend.py  forms.py  models.py  password_validation.py  urls.py  views.py
apps/neuroa_app/migrations/: 0001_initial.py  0002_rename_title_condition_name.py  0003_user_last_name.py  0004_alter_user_role.py  0005_alter_user_token.py  0005_attribute_rename_valid_user_is_email_valid_and_more.py  0006_alter_user_photo.py  0007_alter_user_photo.py  0008_alter_experience_candidate.py  0009_alter_candidateattribute_candidate.py  0010_remove_attribute_description_and_more.py  0011_merge_20250221_1052.py  0012_rename_remote_candidate_candidate_remote_and_more.py  0013_company_joboffer.py  0014_rename_remote_joboffer_remotes.py  0015_experience_description.py  0016_alter_company_options_alter_joboffer_options_and_more.py  0017_candidate_mobilities_alter_attribute_attribute_type_and_more.py  0018_alter_experience_city_alter_experience_country_and_more.py  0019_candidate_attributes_delete_candidateattribute.py  0022_application_resume.py  (+17 more)
apps/theme/: apps.py
assets/css/: tailwind.css
frontend/: Dockerfile  jest.config.js  package.json  postcss.config.js  tailwind.config.js
frontend/coverage/: lcov.info
frontend/src/: App.vue
neuroa_project/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: tailwind.config.js
staticfiles/css/: tailwind.css
(+50 files in other folders)
